6576308 genmsg uses SCCS keywords in its version message. 6591906 buffer overflow in genmsg(1) 6594430 genmsg should export yy* global variables to libl

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -139,6 +139,7 @@ COMMON_SUBDIRS = \
 	cmd/fs.d/zfs/fstyp \
 	cmd/fuser \
 	cmd/gcore \
+	cmd/genmsg \
 	cmd/getconf \
 	cmd/getdevpolicy \
 	cmd/getfacl \
